# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api
 definitions:
   github_com_faisalaffan_ewallet-system_internal_domain.CreateWalletRequest:
     properties:
@@ -423,9 +424,4 @@ paths:
       summary: Transfer between wallets
       tags:
       - wallets
-securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: Authorization
-    type: apiKey
 swagger: "2.0"
