# internal/handler/wallet.go
@@ -14,10 +14,6 @@ import (
 // @title Multi-Currency E-Wallet API
 // @version 1.0
 // @description Ledger-based e-wallet backend with multi-currency support.
-// @securityDefinitions.apikey ApiKeyAuth
-// @in header
-// @name Authorization
-// @host ewallet-api.faisalaffan.com
 // @BasePath /api
 
 type WalletHandler struct {
